style: Fix text overflow in affiliations panel header

--- a/src/app/cdk/panel/panel/panel.component.scss
+++ b/src/app/cdk/panel/panel/panel.component.scss
@@ -10,6 +10,7 @@
   align-items: center;
   justify-content: space-between;
   min-height: 56px;
+  word-break: break-all;
   h2 {
     margin: 0;
   }
